<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSelectFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/select_video_audio"
                    tools:ignore="ButtonStyle,RtlHardcoded" />

                <Button
                    android:id="@+id/btnPreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/preview"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/videoFrame"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/buttons">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvStartTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/videoFrame"
                android:text="@string/start_time_label" />

            <EditText
                android:id="@+id/etStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvStartTimeLabel"
                android:autofillHints="00:00:00"
                android:hint="@string/start_time_hh_mm_ss"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvEndTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etStartTime"
                android:text="@string/end_time_label" />

            <EditText
                android:id="@+id/etEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEndTimeLabel"
                android:autofillHints="00:00:00"
                android:hint="@string/end_time_hh_mm_ss"
                android:inputType="text" />

            <Button
                android:id="@+id/btnCut"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEndTime"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/cut_file" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>